# Atom

./: .cursorrules  .gitignore  CMakeLists.txt  LICENSE  main.cpp
mod/: build.gradle  gradle.properties
mod/src/client/java/com/atom/: AtomClient.java  AtomManager.java  AtomPacket.java  AtomVisualizer.java
mod/src/client/java/com/atom/mixin/client/: ExampleClientMixin.java
mod/src/client/resources/: atom.client.mixins.json
mod/src/main/java/com/atom/: Atom.java  AtomClient.java  AtomManager.java  AtomPacket.java  AtomVisualizer.java
mod/src/main/java/com/atom/mixin/: ExampleMixin.java
mod/src/main/resources/: atom.mixins.json  fabric.mod.json
network/: CMakeLists.txt  NetworkServer.cpp  NetworkServer.h
physics/: CMakeLists.txt  Particle.cpp  Particle.h  SimulationEngine.cpp  SimulationEngine.h  Vec3.h
viewer/: index.html
